k8s/base/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-project-api
spec:
  selector:
    matchLabels:
      app: cs-project-api
  template:
    metadata:
      labels:
        app: cs-project-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: cs-project-api
        image: ghcr.io/ahendest/cs-project-api
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
  
        securityContext:
          capabilities:
            drop:
            - ALL
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: cs-project-api-service
spec:
  selector:
    app: cs-project-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer   # keep; we'll use port-forward on kind
