k8s/base/mssql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        securityContext:
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: mssql-data
          mountPath: /var/opt/mssql
     
      volumes:
      - name: mssql-data
        persistentVolumeClaim:
            claimName: mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP
