k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-project-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - cs-api.local
    secretName: cs-project-tls
  rules:
  - host: cs-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cs-project-api-service
            port:
              number: 80
